crates/aranya-policy-compiler/tests/data/type_errors/debug_assert_not_bool_invalid_type.fail.snap
---
source: crates/aranya-policy-compiler/tests/tests.rs
expression: error
---
error: invalid type: int
  |
2 |     debug_assert(3)
  |                  ^ expected `bool` but found `int`
